{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 50,
  "lineage": "bf340a68-5a51-c4d3-0494-433c965858f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "create_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:internet-gateway/igw-032e3a74527ac11b4",
            "id": "igw-032e3a74527ac11b4",
            "owner_id": "194729441513",
            "tags": {
              "Name": "proper noun_IGW"
            },
            "tags_all": {
              "Name": "proper noun_IGW"
            },
            "vpc_id": "vpc-043d42e8add3d71dd"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "create_pri_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:route-table/rtb-021f85c096fbb9eb1",
            "id": "rtb-021f85c096fbb9eb1",
            "owner_id": "194729441513",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "proper noun-private-route"
            },
            "tags_all": {
              "Name": "proper noun-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-043d42e8add3d71dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "create_pub_Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:route-table/rtb-0905bdff8d62d36a8",
            "id": "rtb-0905bdff8d62d36a8",
            "owner_id": "194729441513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032e3a74527ac11b4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "proper noun_public_route"
            },
            "tags_all": {
              "Name": "proper noun_public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-043d42e8add3d71dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "create_pri_RTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47268cd133a459e",
            "route_table_id": "rtb-021f85c096fbb9eb1",
            "subnet_id": "subnet-05c6de0129563ed99"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eab92211fcf553a2",
            "route_table_id": "rtb-021f85c096fbb9eb1",
            "subnet_id": "subnet-0a068c194bb3f7926"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47268cd133a459e",
            "route_table_id": "rtb-021f85c096fbb9eb1",
            "subnet_id": "subnet-05c6de0129563ed99"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eab92211fcf553a2",
            "route_table_id": "rtb-021f85c096fbb9eb1",
            "subnet_id": "subnet-0a068c194bb3f7926"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47268cd133a459e",
            "route_table_id": "rtb-021f85c096fbb9eb1",
            "subnet_id": "subnet-05c6de0129563ed99"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eab92211fcf553a2",
            "route_table_id": "rtb-021f85c096fbb9eb1",
            "subnet_id": "subnet-0a068c194bb3f7926"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47268cd133a459e",
            "route_table_id": "rtb-021f85c096fbb9eb1",
            "subnet_id": "subnet-05c6de0129563ed99"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eab92211fcf553a2",
            "route_table_id": "rtb-021f85c096fbb9eb1",
            "subnet_id": "subnet-0a068c194bb3f7926"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a47268cd133a459e",
            "route_table_id": "rtb-021f85c096fbb9eb1",
            "subnet_id": "subnet-05c6de0129563ed99"
          },
          "dependencies": [
            "aws_route_table.create_pri_Route",
            "aws_subnet.create_pri_sub",
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "create_pub_RTAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07808c3c775946fec",
            "route_table_id": "rtb-0905bdff8d62d36a8",
            "subnet_id": "subnet-090a5d4df9953a869"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015f24a05dcf6bf6b",
            "route_table_id": "rtb-0905bdff8d62d36a8",
            "subnet_id": "subnet-0d16268d8c86fc4fa"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07808c3c775946fec",
            "route_table_id": "rtb-0905bdff8d62d36a8",
            "subnet_id": "subnet-090a5d4df9953a869"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015f24a05dcf6bf6b",
            "route_table_id": "rtb-0905bdff8d62d36a8",
            "subnet_id": "subnet-0d16268d8c86fc4fa"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07808c3c775946fec",
            "route_table_id": "rtb-0905bdff8d62d36a8",
            "subnet_id": "subnet-090a5d4df9953a869"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015f24a05dcf6bf6b",
            "route_table_id": "rtb-0905bdff8d62d36a8",
            "subnet_id": "subnet-0d16268d8c86fc4fa"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07808c3c775946fec",
            "route_table_id": "rtb-0905bdff8d62d36a8",
            "subnet_id": "subnet-090a5d4df9953a869"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015f24a05dcf6bf6b",
            "route_table_id": "rtb-0905bdff8d62d36a8",
            "subnet_id": "subnet-0d16268d8c86fc4fa"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07808c3c775946fec",
            "route_table_id": "rtb-0905bdff8d62d36a8",
            "subnet_id": "subnet-090a5d4df9953a869"
          },
          "dependencies": [
            "aws_internet_gateway.create_IGW",
            "aws_route_table.create_pub_Route",
            "aws_subnet.create_pub_sub",
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_pri_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:security-group/sg-078661865bb384350",
            "description": "proper noun_pri_SG",
            "egress": [],
            "id": "sg-078661865bb384350",
            "ingress": [],
            "name": "proper noun_pri_SG",
            "name_prefix": "",
            "owner_id": "194729441513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proper noun_pri_SG"
            },
            "tags_all": {
              "Name": "proper noun_pri_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-043d42e8add3d71dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_pub_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:security-group/sg-011427860c7831580",
            "description": "proper noun_pub_SG",
            "egress": [],
            "id": "sg-011427860c7831580",
            "ingress": [],
            "name": "create_pub_SG",
            "name_prefix": "",
            "owner_id": "194729441513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proper noun_pub_SG"
            },
            "tags_all": {
              "Name": "proper noun_pub_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-043d42e8add3d71dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pri_SGRulesRDSegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2270149135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-078661865bb384350",
            "self": false,
            "source_security_group_id": "sg-011427860c7831580",
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pri_SG",
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pri_SGRulesRDSingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3023097709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-078661865bb384350",
            "self": false,
            "source_security_group_id": "sg-011427860c7831580",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pri_SG",
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pub_SGRulesALLegress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3515624166",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-011427860c7831580",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pub_SGRulesHTTPingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-139889733",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-011427860c7831580",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_pub_SGRulesSSHingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3202142704",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-011427860c7831580",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.create_pub_SG",
            "aws_vpc.create_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-05c6de0129563ed99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.5.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c6de0129563ed99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proper noun-private-subnet-0"
            },
            "tags_all": {
              "Name": "proper noun-private-subnet-0"
            },
            "vpc_id": "vpc-043d42e8add3d71dd"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-0a068c194bb3f7926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.5.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a068c194bb3f7926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proper noun-private-subnet-1"
            },
            "tags_all": {
              "Name": "proper noun-private-subnet-1"
            },
            "vpc_id": "vpc-043d42e8add3d71dd"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-090a5d4df9953a869",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090a5d4df9953a869",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proper noun-public-subnet-0"
            },
            "tags_all": {
              "Name": "proper noun-public-subnet-0"
            },
            "vpc_id": "vpc-043d42e8add3d71dd"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:subnet/subnet-0d16268d8c86fc4fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d16268d8c86fc4fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "194729441513",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "proper noun-public-subnet-1"
            },
            "tags_all": {
              "Name": "proper noun-public-subnet-1"
            },
            "vpc_id": "vpc-043d42e8add3d71dd"
          },
          "dependencies": [
            "aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "create_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:194729441513:vpc/vpc-043d42e8add3d71dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-09bfbe69c32842e6a",
            "default_route_table_id": "rtb-05bdd6c5c6f34a33a",
            "default_security_group_id": "sg-047cf6365da042863",
            "dhcp_options_id": "dopt-0772b700676ea6fcf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-043d42e8add3d71dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05bdd6c5c6f34a33a",
            "owner_id": "194729441513",
            "tags": {
              "Name": "proper noun-vpc"
            },
            "tags_all": {
              "Name": "proper noun-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}